# document-QA-system

./: .dockerignore  .env  .gitignore  COMMIT_HISTORY.md  Dockerfile.backend  Dockerfile.frontend  PROGRESS.md  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  env.example.txt  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 01dc4a247f3_add_audit_logs_table.py  1b139939a729_add_roles_and_relations.py  260b8efc4504_make_user_phone_required_and_unique.py  5058fcea8231_add_permissions_table.py  95455ceddada_change_user_email_to_phone.py  a1b2c3d4e5f6_make_role_tenant_id_nullable.py  a1b2c3d4e5f7_add_document_tables.py  bd10c2d7a8a1_add_config_tables.py  c1d2e3f4a5b6_add_qa_tables.py  e02162d48751_init.py  e17f03d0744c_add_tenant_code_field.py  (+1 more)
app/: main.py
docker/: README.md  nginx.conf  start.sh
docs/: ASSUMPTIONS.md  DESIGN.md  INSTALLATION.md  database-setup.md  doc-module.plan.md  qa-module.plan.md  system-admin-and-doc-module.plan.md  system-admin-module.plan.md  uv-setup.md  功能文档.md  接口文档.md  用户文档.md
frontend/: README.md  index.html  package-lock.json  package.json  vitest.config.ts
scripts/: check_and_add_menus.py  check_user_permissions.py  check_vectorization.py  init_test_data.py  run_tests.bat  run_tests.sh  test_vectorization.py
tests/: README.md  conftest.py  test_auth.py  test_config_service.py  test_documents.py  test_folders.py  test_integration.py  test_llm_service.py  test_main.py  test_qa.py  test_repositories.py  test_retrieval_service.py  test_services.py  test_tenants.py  test_users.py
(+160 files in other folders)
