[project]
name = "document-qa-system"
version = "1.0.0"
description = "智能文档问答系统 - 个人知识库系统"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "email-validator==2.1.0.post1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==3.2.2",
    "python-multipart==0.0.6",
    "alembic==1.12.1",
    "psycopg2-binary==2.9.9",
]

[project.optional-dependencies]
mysql = [
    "pymysql==1.1.0",
    # 或者使用 mysqlclient（需要系统依赖）
    # "mysqlclient==2.2.0",
]
oracle = [
    "cx_Oracle==8.3.0",
    # 或者使用 oracledb（Oracle官方推荐）
    # "oracledb==1.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]

